--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y build-essential git unzip
+        sudo apt install -y build-essential git unzip expect
         sudo apt install -y autoconf automake libtool pkg-config
         sudo apt install -y zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev
         sudo apt install -y libreadline-dev libsqlite3-dev libssl-dev libffi-dev
@@ -38,9 +38,19 @@ jobs:
         pip install buildozer
         pip install cython==0.29.33
     
-    - name: Build APK with Buildozer
+    - name: Build APK with expect to handle license prompts
       run: |
-        buildozer android debug
+        expect << 'EOF'
+        set timeout 7200
+        spawn buildozer android debug
+        expect {
+          "Accept? (y/N):" { send "y\r"; exp_continue }
+          "Do you accept the license" { send "y\r"; exp_continue }
+          "(y/N)" { send "y\r"; exp_continue }
+          eof { exit }
+          timeout { exit 1 }
+        }
+        EOF
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
